career-guide/client/css/index.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Varela+Round&display=swap');

:root {
  --main-bg-color: white;
  --main-color: black;      /* where we set background we also need to set color */
  --PONTBlue: #36b6b0;      /* renamed from verdigris to PONTBlue (though it is more turqoise so blue may not be the best choice) */
  --PONTLightBlue: #7fb9e6; /* renamed from teagreen to PONTLightBlue */
  --PONTRed: #e8491f;       /* renamed from flame to PONTRed */
  --PONTGreen: #b2cf65;     /* renamed from middlegreenyellow to PONTGreen */
  --PONTOrange: #e69911;    /* rename from gamboge to PONTOrange */
  --davys-gray: #333;

  /* defaults before the fonts load */
  --title-font: 'Varela Round', sans-serif;
  --text-font: 'Open Sans', sans-serif;
  --navbarHeight: 5em;
}

* {
  padding: 0;
  margin: 0;
  font-family: var(--title-font);
}

/* set global margin and padding to 0 so defaults don't interfer with layout */

#empty-page {
  color: var(--davys-gray);
}

#loadingLabel {
  color: var(--davys-gray);
  position: absolute;
  margin: 1.5em auto;
  left: 0;
  right: 0;
  text-align: center;
}

#loadingLabel::after {
  content: ' ';
  position: absolute;
  animation: linear 3s infinite loading;
}

@keyframes loading {
  0% { content: ' '; }
  25% { content: '.'; }
  50% { content: '..'; }
  75% { content: '...'; }
}

.splash {
  max-width: 30em;
  background-color: var(--main-bg-color);
  box-shadow: 0 0 0.25rem 0.01rem var(--davys-gray);
  border-radius: 0.5em;
  padding: 1em;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  margin-bottom: 2em;
}

.splash > ul {
  margin: 0 1em 1em;
}

.splash > p {
  margin: 1em 0;
}

.splash > #get-started {
  width: 10em;
  margin: auto calc(50% - 5em);
  height: 4em;
}

#login-requester {
  box-shadow: 0 0 0.25rem 0.01rem var(--PONTRed);
  width: 95%;
  max-width: 30em;
  margin: 2em 0;
  padding: 1em;
  border-radius: 0.5em;
  background-color: var(--main-bg-color);
}

#login-requester > h3 {
  color: var(--PONTRed);
}

#login-requester > p {
  padding: 0.5em 1em;
}

body {
  background-color: var(--main-bg-color);
  color: var(--main-color);
  background-image: url('../img/bgimg.png');
  overflow-x: hidden;

  /* to prevent the horizontal scrollbar turning on automatically with the vertical scroll bar */
}

/* TODO: Make the colors for the navbar-slide menu match the rest of the pages. */
#navbar-slide {
  position: absolute;
  width: 20em;
  top: 5em; /* just under the navbar */
  bottom: 0; /* bottom of screen because the <nav> doesn't count */
  background-color: var(--davys-gray);
  display: none;
}

#navbar-slide > ul {
  list-style: none;
}

#navbar-login-prompt {
  font-weight: bold;
  cursor: pointer;
}

#navbar-slide.active {
  display: flex;
  flex-direction: column;
  right: 0;
  z-index: 1;
}

.navbar-slide-item {
  display: block;
  color: var(--main-bg-color);
  text-decoration: none;
  margin: 0;
  padding: 2rem;
  text-align: center;
}

.navbar-slide-item:hover {
  background-color: var(--PONTBlue);
}

#title {
  font-size: var(--title-fontsize, 2em);
  color: var(--PONTRed);
  text-align: center;
  max-height: 100%;
  overflow: auto;
}

h1 {
  margin: 0.5em;
}

#navbar {
  box-shadow: 0 0 0.25rem 0.01rem var(--davys-gray);
  width: 100vw;
  height: var(--navbarHeight);
  display: flex;
  justify-content: center;
}

#navbar-top {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.5em;
  min-width: 20em;
  width: inherit;
  max-width: 50em;
}

#logo {
  width: 15em;
  height: 3em;
  object-fit: scale-down;
  margin: 0.25rem;
}

#nav-btn {
  padding: 1rem;
  cursor: pointer;
}

main {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#next-job-page {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 6em 10em 1fr 1.5em 0.2fr;
  width: 100%;
  margin: 1em auto 0;
  height: var(--next-job-height, calc(95vh - var(--navbarHeight)));
  max-width: 40em;
  background-color: var(--main-bg-color);
  box-shadow: 0 0 0.25rem 0.05rem var(--PONTGreen);
  border-radius: 0.5em;
}

@media screen and (max-width: 41em) {
  #next-job-page {
    box-shadow: none;
    margin-bottom: 0;
  }
}

#next-job-page > #title {
  grid-row-start: 1;
  grid-row-end: 2;
  grid-column-start: 1;
  grid-column-end: 4;
}

#item-image {
  grid-row-start: 2;
  grid-row-end: 3;
  grid-column-start: 2;
  grid-column-end: 3;
  height: 10em;
  width: 10em;
  margin: 0 auto;
}

button {
  cursor: pointer;
  color: var(--main-bg-color);
  padding: 0.2em;
  font-size: 1em;
  border-radius: 0.5em;
}

#btn-shortlist {
  grid-row-start: 2;
  grid-row-end: 3;
  grid-column-start: 3;
  grid-column-end: 4;
  justify-self: end;
  align-self: start;
  height: 1.8em;
  width: 1.8em;
  margin: 1em;
  border-width: 0.1em;
  border-radius: 0.5em;
  font-size: 2em;
  line-height: 1em;
  text-align: center;
  align-items: center;
}

#btn-dislike,
#btn-option1 {
  grid-column-start: 1;
  grid-column-end: 2;
}

#btn-showLater,
#btn-option2 {
  grid-column-start: 2;
  grid-column-end: 3;
}

#btn-like,
#btn-option3 {
  grid-column-start: 3;
  grid-column-end: 4;
}

.job,
.question {
  grid-row-start: 5;
  grid-row-end: 6;
  margin: 0.8em auto;
  width: calc(50% + 3.5em);
  max-width: 100%;
  height: 3em;
}

#show-more,
#show-less {
  grid-row-start: 4;
  grid-row-end: 5;
  grid-column-start: 2;
  grid-column-end: 3;
  font-size: inherit;
  font-style: inherit;
  color: var(--PONTLightBlue);
  border: none;
  background: none;
}

#info-text {
  grid-row-start: 3;
  grid-row-end: 4;
  grid-column-start: 1;
  grid-column-end: 4;
  max-height: 100%;
  text-align: left;
  align-self: start;
  padding: 0 calc((20% - 75px) + 1.2em); /* no padding on mobile */
  font-family: var(--text-font);
  overflow: auto;
}

#list-container {
  max-width: max-content;
  margin: 0 auto;
}

.list-item-container {
  display: grid;
  grid-template-rows: auto auto;
  grid-template-columns: 6em auto 25%; /* allows for button on shortlist to be mobile friendly */
  width: 95%;
  max-width: 40em; /* could be a touch wider */
  margin-top: 0.5em;
  margin-bottom: 0.5em;
  padding: 0.5em;
  background-color: white;
  box-shadow: 0 0 0.5em rgb(178, 207, 101);
  border-radius: 0.5em;
}

.list-item-container.like-history {
  height: auto;
}

.list-item-container.shortlist {
  height: 8em;
}

.list-item-container.expanded {
  min-height: 12em;
  height: auto;
}

.list-item-title {
  grid-column-start: 2;
  grid-column-end: 3;
  grid-row-start: 1;
  grid-row-end: 2;
  padding: 0.3em;
  text-align: left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.like-history > .list-item-title {
  white-space: normal;
}

.list-item-container.expanded > .list-item-title {
  white-space: normal;
}

.question-title {
  grid-column-start: 1;
  grid-column-end: 4;
  grid-row-start: 1;
  grid-row-end: 2;
  padding: 0.3em;
  text-align: center;
  border-bottom: 0.15em dashed var(--PONTLightBlue);
}

.question-answer {
  grid-column-start: 1;
  grid-column-end: 4;
  grid-row-start: 2;
  grid-row-end: 3;
  display: flex;
  justify-content: space-around;
  margin: 0.5em auto auto;
  width: inherit;
  white-space: nowrap;
}

.question-answer > * {
  display: flex;
  align-items: center;
  justify-content: center;
  width: inherit;
  max-width: 40%;
  height: 3em;
  margin: 0.5em 0;
  border-radius: 3em;
  border: thin solid var(--davys-gray);
  text-transform: capitalize;
  cursor: pointer;
}

.question-answer > .selected {
  background: var(--PONTGreen);
}

.job-image {
  grid-column-start: 1;
  grid-column-end: 2;
  grid-row-start: 1;
  grid-row-end: 3;
  max-height: 100%;
  max-width: 100%;
  justify-self: center;
  align-self: center;
}

.job-choice {
  grid-column-start: 3;
  grid-column-end: 4;
  grid-row-start: 1;
  grid-row-end: 3;
  max-height: 100%;
  max-width: 100%;
  padding: 0.5em;
  border-radius: 3em;
  display: flex;
  align-items: center;
  justify-content: center;
  justify-self: center;
  align-self: center;
  font-size: 2em;
  cursor: pointer;
}

.shortlist-btns {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  justify-content: space-around;
  align-items: stretch;
  height: 100%;
  grid-column-start: 3;
  grid-column-end: 4;
  grid-row-start: 1;
  grid-row-end: 3;
  max-height: 15em;
}

.shortlist-btns > button {
  min-height: 4em;
}

/* TODO: Added shadow - this make them look more like buttons but is there a better way to accomplish this? */
.like {
  background: var(--PONTGreen);
  box-shadow: 0 0 0.2em var(--davys-gray);
}

/* TODO: Added shadow - this make them look more like buttons but is there a better way to accomplish this? */
.dislike {
  background: var(--PONTRed);
  box-shadow: 0 0 0.2em var(--davys-gray);
}

.job-desc {
  grid-column-start: 2;
  grid-column-end: 3;
  grid-row-start: 2;
  grid-row-end: 3;
  padding: 0.3em;
  text-align: left;
  overflow: hidden;
}

.btn-1 {
  background-color: var(--PONTRed);
  border: 0.2em solid var(--PONTRed);
}

.btn-1:active,
.btn-1.active-wait {
  color: var(--PONTRed);
  background-color: var(--main-bg-color);
}

.btn-2 {
  background-color: var(--main-bg-color);
  color: var(--PONTLightBlue);
  border: 0.2em solid var(--PONTLightBlue);
}

.btn-2:active,
.btn-2.active-wait {
  color: var(--main-bg-color);
  background-color: var(--PONTLightBlue);
}

.btn-3 {
  background-color: var(--PONTGreen);
  border: 0.2em solid var(--PONTGreen);
}

.btn-3:active,
.btn-3.active-wait {
  color: var(--PONTGreen);
  background-color: var(--main-bg-color);
}

.btn-4 {
  color: var(--davys-gray);
  background-color: var(--main-bg-color);
  border: 0.2em solid var(--davys-gray);
}

.btn-4:active {
  background-color: var(--PONTGreen);
  border-color: var(--PONTGreen);
}

